fix: remove custom image margin* seems like `unwrap-images` plugin doesn't work anymroe

--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -10,13 +10,6 @@ body {
   transition: background-color 0.3s, color 0.3s;
 }
 
-.post-container {
-  img {
-    display: block;
-    margin: 2rem auto;
-  }
-}
-
 .post-title > time {
   float: right;
   font-size: 1.5rem;
